Fixed buttons at lower resolutions Some of the bootstrap styling was reworked in order to accommodate smaller screens.  The message input box and clear message button breaks on resolutions below 768w but that is a known bug described in the bootstrap documentation and can only be fixed by editing a number of bootstrap parameters in the bootstrap file.

--- a/chattystyle.css
+++ b/chattystyle.css
@@ -21,8 +21,7 @@ body {
   padding: 2% 3% 2% 0;
   margin-left: auto;
   margin-right: auto;
-  min-height: 80vh;
-  max-height: 80vh;
+  height: 80vh;
   overflow-x: hidden;
   overflow-y: scroll;
   border: 2px solid lightgray;
@@ -52,4 +51,9 @@ body {
   font-family: courier;
   text-decoration: underline;
   margin: 0;
+}
+
+/*Lengthens the message input*/
+.input-width {
+  min-width: 50vw;
 }
